# whatsapp-bot

./: README.md  pyproject.toml
app/: settings.py  tasks.py
app/gateway/: __init__.py  whatsapp.py
app/webhook/: webhook.py
